--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -84,16 +84,16 @@
             android:layout_height="wrap_content"
             android:layout_below="@id/imageviewEmoticon"
             android:layout_centerHorizontal="true"
-            android:layout_marginStart="8dp"
-            android:layout_marginLeft="8dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginLeft="16dp"
             android:layout_marginTop="24dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginRight="8dp"
-            android:layout_marginBottom="8dp"
+            android:layout_marginEnd="16dp"
+            android:layout_marginRight="16dp"
+            android:layout_marginBottom="16dp"
             android:text="79% of the reviews posted for this product are fake. We suggest you to be sure before buying it."
             android:textColor="#000000"
-            android:textSize="24dp"
-            android:textStyle="bold"
+            android:textSize="20dp"
+            android:textStyle="normal"
             android:visibility="gone" />
 
         <TextView
