--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -44,7 +44,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/imageviewError"
-            android:layout_centerInParent="true"
             android:layout_marginStart="24dp"
             android:layout_marginLeft="24dp"
             android:layout_marginTop="32dp"
@@ -62,10 +61,10 @@
             android:id="@+id/btnPost"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@id/etLink"
+            android:layout_alignParentBottom="true"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="16dp"
-            android:layout_marginBottom="16dp"
+            android:layout_marginBottom="56dp"
             android:text="@string/btn_text"
             android:textColor="@color/white"
             android:visibility="visible"
@@ -84,7 +83,7 @@
 
 
         <androidx.cardview.widget.CardView
-            android:id="@+id/cardView"
+            android:id="@+id/cardViewResult"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@id/imageviewEmoticon"
@@ -109,9 +108,10 @@
                 android:layout_marginEnd="16dp"
                 android:layout_marginRight="16dp"
                 android:layout_marginBottom="16dp"
+                android:padding="2dp"
+                android:text="aaaaaaaaaaaaaaaaaa"
                 android:textColor="#000000"
                 android:textSize="20dp"
-                android:padding="2dp"
                 android:textStyle="normal"
                 android:visibility="visible" />
         </androidx.cardview.widget.CardView>
@@ -131,22 +131,51 @@
             android:textStyle="bold"
             android:visibility="gone" />
 
-        <TextView
-            android:id="@+id/tvError"
+        <Button
+            android:id="@+id/btn2Post"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@id/imageviewError"
+            android:layout_alignParentBottom="true"
             android:layout_centerHorizontal="true"
-            android:layout_marginStart="8dp"
-            android:layout_marginLeft="8dp"
-            android:layout_marginTop="24dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginRight="8dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginBottom="56dp"
+            android:text="@string/btn2_text"
+            android:textColor="@color/white"
+            android:visibility="gone"
+            app:backgroundTint="@color/purple_500" />
+
+        <androidx.cardview.widget.CardView
+            android:id="@+id/cardViewError"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/imageviewError"
+            android:layout_marginStart="16dp"
+            android:layout_marginLeft="16dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="16dp"
+            android:layout_marginRight="16dp"
             android:layout_marginBottom="8dp"
-            android:text="@string/app_unavailable"
-            android:textColor="#000000"
-            android:textSize="16dp"
-            android:visibility="gone" />
+            android:visibility="gone"
+            app:cardBackgroundColor="#ffffff"
+            app:cardCornerRadius="8dp"
+            app:cardElevation="4dp">
+
+            <TextView
+                android:id="@+id/tvError"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:layout_marginLeft="8dp"
+                android:layout_marginTop="24dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginRight="8dp"
+                android:layout_marginBottom="8dp"
+                android:padding="2dp"
+                android:text="@string/app_unavailable"
+                android:textColor="#000000"
+                android:textSize="16dp"
+                android:visibility="visible" />
+        </androidx.cardview.widget.CardView>
 
 
     </RelativeLayout>
