--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,6 +26,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
+            android:indeterminateTint="@color/purple_500"
             android:visibility="gone" />
 
         <ImageView
@@ -51,9 +52,12 @@
             android:layout_marginRight="24dp"
             android:layout_marginBottom="32dp"
             android:hint="@string/et_hint"
+            android:fontFamily="@font/montserrat_regular"
             android:inputType="text"
             android:textColor="#000000"
             android:textColorHint="#C4C4C4"
+            android:textCursorDrawable="@drawable/custom_cursor"
+            android:backgroundTint="#000000"
             android:textSize="24sp"
             android:visibility="visible" />
 
@@ -66,6 +70,7 @@
             android:layout_marginTop="16dp"
             android:layout_marginBottom="56dp"
             android:text="@string/btn_text"
+            android:fontFamily="@font/montserrat_medium"
             android:textColor="@color/white"
             android:visibility="visible"
             app:backgroundTint="@color/purple_500" />
@@ -74,7 +79,8 @@
             android:id="@+id/imageviewEmoticon"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="56dp"
+            android:layout_below="@id/tvText"
+            android:layout_marginTop="16dp"
             android:contentDescription="@string/content_description"
             android:paddingLeft="16dp"
             android:paddingRight="16dp"
@@ -109,7 +115,7 @@
                 android:layout_marginRight="16dp"
                 android:layout_marginBottom="16dp"
                 android:padding="2dp"
-                android:text="aaaaaaaaaaaaaaaaaa"
+                android:fontFamily="@font/montserrat_medium"
                 android:textColor="#000000"
                 android:textSize="20dp"
                 android:textStyle="normal"
@@ -126,6 +132,7 @@
             android:layout_marginTop="24dp"
             android:layout_marginBottom="8dp"
             android:text="@string/tv_text"
+            android:fontFamily="@font/montserrat_bold"
             android:textColor="#000000"
             android:textSize="23dp"
             android:textStyle="bold"
@@ -140,6 +147,7 @@
             android:layout_marginTop="16dp"
             android:layout_marginBottom="56dp"
             android:text="@string/btn2_text"
+            android:fontFamily="@font/montserrat_medium"
             android:textColor="@color/white"
             android:visibility="gone"
             app:backgroundTint="@color/purple_500" />
@@ -166,15 +174,15 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
                 android:layout_marginLeft="8dp"
-                android:layout_marginTop="24dp"
+                android:layout_marginTop="8dp"
                 android:layout_marginEnd="8dp"
                 android:layout_marginRight="8dp"
                 android:layout_marginBottom="8dp"
                 android:padding="2dp"
                 android:text="@string/app_unavailable"
+                android:fontFamily="@font/montserrat_medium"
                 android:textColor="#000000"
-                android:textSize="16dp"
-                android:visibility="visible" />
+                android:textSize="16dp"/>
         </androidx.cardview.widget.CardView>
 
 
